Refund Module Display Dynamic Data

--- a/fuse/src/app/main/homework/homework.html
+++ b/fuse/src/app/main/homework/homework.html
@@ -9,6 +9,7 @@
                  class="ms-widget ng-isolate-scope layout-column flex-gt-xs-50 flex-gt-md-25 flex-100">
         <ms-card template="'app/core/directives/ms-card/templates/template-1/template-1.html'"
                  ng-model="vm.cards[0]"></ms-card>
+        testing: {{vm.testing}}
       </ms-widget>
     </div>
   </div>
