--- a/fuse/src/app/main/refund/refund.html
+++ b/fuse/src/app/main/refund/refund.html
@@ -1,3 +1,6 @@
+<div ncy-breadcrumb></div>
 <h1>
-    This is refund page
+    This is refund page x
+  [from inline controller] vm.testing: {{vm.testing}}
+  [from data json] vm.hellowText: {{vm.item.helloText}}
 </h1>
